adds more structure to project, adds routing, adds global styling, adds more features to navigation toolbar and sidenav (responsive behaviour), adds nav-items-list component

--- a/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
@@ -1,20 +1,29 @@
-<!-- basically I am gonna show always this mnat-toolbar if > 900px 
-    if less <700px I am gonna show the hamburguer btn, 
-    and if <700px I am gonna only show the hamburguer btn and when I toggle it will 
-come from the left side the sidenav, and it will hide the mat-toolbar (and to show it again I need to click on close
-button of sidenav or in the content part of the mat-sidenav-content and it will close the sidenav and show again the toolbar!) -->
+<mat-toolbar color="primary">
+  <ul>
+    <div class="add-space-container">
+      <div class="li-container">
+        <li class="icon-menu-container">
+          <div class="icon logo" [@logoAnimation]="isMovingStar()">
+            <a routerLink="/welcome" routerLinkActive="active-router-link" (mouseover)="showMovingLogo = true"
+              (mouseout)="showMovingLogo = false"><img id="toolbar-image"
+                src="../../../../../assets/img/abstract-retro-game.png" />
+            </a>
+          </div>
+          <button mat-icon-button color="primary" class="menu-btn navig-item" (click)="inputSideNav?.toggle()" >
+            <mat-icon>menu</mat-icon>
+          </button>
+        </li>
 
+        <li class="hide-item logo-txt">
+          <a class="toolbar-title" routerLink="/welcome" routerLinkActive="active-router-link" 
+            (mouseover)="showMovingLogo = true"
+            (mouseout)="showMovingLogo = false"><span>OBSIDIAN</span><span>TEARS</span></a>
+        </li>
+      </div>
 
-  <mat-toolbar>
-    <button mat-icon-button class="example-icon" (click)="inputSideNav?.toggle()">
-      <mat-icon>menu</mat-icon>
-    </button>
-    <span>My App</span>
-    <span class="example-spacer"></span>
-    <button mat-icon-button class="example-icon favorite-icon">
-      <mat-icon>favorite</mat-icon>
-    </button>
-    <button mat-icon-button class="example-icon">
-      <mat-icon>share</mat-icon>
-    </button>
-  </mat-toolbar>
+      <div class="li-container hide-item">
+        <app-nav-items-list></app-nav-items-list>
+      </div>
+    </div>
+  </ul>
+</mat-toolbar>
