--- a/obsidian-tears-fe/src/app/styles/colors.scss
+++ b/obsidian-tears-fe/src/app/styles/colors.scss
@@ -1,3 +1,9 @@
 $primary-deep-crimson: rgb(89, 0, 22);
 $primary-midnight-blue: rgba(25, 25, 112, 1);
 $primary-gold-rush: rgba(184, 134, 11, 1);
+
+$semi-transparent-primary-deep-crimson: rgba($primary-deep-crimson, .5);
+
+$primary-obsidian: #455a64;
+$primary-obsidian-light: #a2b9c3;
+
