--- a/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.html
@@ -1,1 +1,44 @@
-<p>WELCOME works!</p>
+<div class="welcome-container">
+
+    <p>WELCOME works!</p>
+    
+    <h3>Extended Fab</h3>
+    <div class="example-button-row">
+
+
+        <button type="button" mat-fab extended color="primary">
+            <img src="../../../../../assets/img/npc3.jpg" width="32">
+          </button>
+
+          <a
+          ><img
+            id="toolbar-image"
+            src="../../../../../assets/img/npc3.jpg"
+            width="32"
+          />
+        </a>
+
+
+      <button mat-fab extended color="primary">
+        <mat-icon>favorite</mat-icon>
+        Primary
+      </button>
+      <button mat-fab extended color="accent">
+        <mat-icon>favorite</mat-icon>
+        Accent
+      </button>
+      <button mat-fab extended color="warn">
+        <mat-icon>favorite</mat-icon>
+        Warn
+      </button>
+      <button mat-fab extended disabled>
+        <mat-icon>favorite</mat-icon>
+        Disabled
+      </button>
+      <a mat-fab extended routerLink=".">
+        <mat-icon>favorite</mat-icon>
+        Link
+      </a>
+    </div>
+
+</div>
