--- a/obsidian-tears-fe/src/app/styles/styles.scss
+++ b/obsidian-tears-fe/src/app/styles/styles.scss
@@ -1,49 +1,36 @@
 @import "./theme.scss";
 @import "./viewports.scss";
+@import "./colors.scss";
 
 html,
 body {
   height: 100%;
   // body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-  font-family: 'Press Start 2P', cursive;
+  // font-family: 'Press Start 2P', cursive;
+  font-family: 'Pixel Font', sans-serif;
 }
 
 body {
   margin: 0;
 
-  /* Default styles for larger screens */
   ::-webkit-scrollbar {
-    width: 50px;
-    height: 50px;
-
-    &-webkit-scrollbar-thumb {
-      background-color: #8c8c8c;
-      border: 1px solid #000;
-      border-radius: 4px;
-
-      &:hover {
-        background-color: #aaaaaa;
-      }
-
-      &:active {
-        background-color: #666666;
-      }
-    }
+    width: 10px;
+    height: 4.4px;
 
     &-track {
       background-color: #00000020;
     }
-  }
 
+    &-thumb {
+      background-color: lighten(rgba(0, 150, 136, 0.15), 10%);;
+      border-radius: 20px;
 
-  /* Responsive styles for smaller screens (e.g., mobile devices) */
-  @media screen and (max-width: $lt-sm-md) {
-    ::-webkit-scrollbar {
-      width: 6px;
-      height: 6px;
+      &:hover {
+        background-color: darken(rgba(0, 150, 136, 0.44), 1%);
+      }
 
-      &-thumb {
-        border-radius: 4px;
+      &:active {
+        background-color: darken(rgba(0, 150, 136, 0.64), 10%);
       }
     }
 
