--- a/obsidian-tears-fe/src/app/styles/theme.scss
+++ b/obsidian-tears-fe/src/app/styles/theme.scss
@@ -1,4 +1,3 @@
-
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
@@ -9,24 +8,86 @@
 // Be sure that you only ever include this mixin once!
 @include mat.core();
 
+$obsidian-primary-palette: (
+  50 : #e9ebec,
+  100 : #c7ced1,
+  200 : #a2adb2,
+  300 : #7d8c93,
+  400 : #61737b,
+  500 : #455a64,
+  600 : #3e525c,
+  700 : #364852,
+  800 : #2e3f48,
+  900 : #1f2e36,
+  A100 : #7dcdff,
+  A200 : #4abaff,
+  A400 : #17a7ff,
+  A700 : #009cfc,
+  contrast: (50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #ffffff,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #000000,
+    A700 : #ffffff,
+  )
+);
+
+$obsidian-accent-palette: (
+  50 : #eeeeee,
+  100 : #d6d6d6,
+  200 : #bababa,
+  300 : #9e9e9e,
+  400 : #8a8a8a,
+  500 : #757575,
+  600 : #6d6d6d,
+  700 : #626262,
+  800 : #585858,
+  900 : #454545,
+  A100 : #f6afaf,
+  A200 : #f18282,
+  A400 : #ff4141,
+  A700 : #ff2727,
+  contrast: (50 : #000000,
+    100 : #000000,
+    200 : #000000,
+    300 : #000000,
+    400 : #000000,
+    500 : #ffffff,
+    600 : #ffffff,
+    700 : #ffffff,
+    800 : #ffffff,
+    900 : #ffffff,
+    A100 : #000000,
+    A200 : #000000,
+    A400 : #ffffff,
+    A700 : #ffffff,
+  )
+);
+
+
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$obsidian-tears-fe-primary: mat.define-palette(mat.$indigo-palette);
-$obsidian-tears-fe-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
+$obsidian-tears-fe-primary: mat.define-palette($obsidian-primary-palette);
+$obsidian-tears-fe-accent: mat.define-palette($obsidian-accent-palette);
 
 // The warn palette is optional (defaults to red).
 $obsidian-tears-fe-warn: mat.define-palette(mat.$red-palette);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
-$obsidian-tears-fe-theme: mat.define-light-theme((
-  color: (
-    primary: $obsidian-tears-fe-primary,
-    accent: $obsidian-tears-fe-accent,
-    warn: $obsidian-tears-fe-warn,
-  )
-));
+$obsidian-tears-fe-theme: mat.define-light-theme((color: (primary: $obsidian-tears-fe-primary,
+        accent: $obsidian-tears-fe-accent,
+        warn: $obsidian-tears-fe-warn,
+      )));
 
 // Include theme styles for core and each component used in your app.
 // Alternatively, you can import and @include the theme mixins for each component
