completes welcome page, completes footer, adds more styling, improves responsive behaviour

--- a/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.html
@@ -1,5 +1,23 @@
-
 <div class="footer-container">
+    <div class="top">
+        <ul>
+            <li>
+                <a href="https://twitter.com/obsidian__tears" target="_blank" rel="noopener">
+                    <img id="toolbar-image" src="../../../../../assets/img/discord-obsidian-logo.svg" />
+                    <span>Discord</span>
+                    <span class="message">Obsidian Tears Community on Discord</span>
+                </a>
+            </li>
+            <li>
+                <a href="https://twitter.com/obsidian__tears" target="_blank" rel="noopener">
+                    <img id="toolbar-image" src="../../../../../assets/img/twitter-new-brand-icon-obsidian-logo.svg" />
+                    <span>Twitter</span>
+                    <span class="message">Connect with &#64;obsidian__tears on Twitter</span>
+                </a>
+            </li>
+        </ul>
+    </div>
 
-    <h2>FOOTER</h2>
+    <p>Super-powered by Obsidian Tears ©2023-2024. Code licensed under an MIT-style License. All rights reserved - Copyright ©2023-2024.</p>
+
 </div>
