--- a/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/header-component/header.component.html
@@ -14,7 +14,7 @@
           </button>
         </li>
 
-        <li class="hide-item logo-txt">
+        <li class="hide-item">
           <a class="toolbar-title" routerLink="/welcome" routerLinkActive="active-router-link" 
             (mouseover)="showMovingLogo = true"
             (mouseout)="showMovingLogo = false"><span>OBSIDIAN</span><span>TEARS</span></a>
