--- a/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.html
@@ -1,8 +1,7 @@
 <div class="welcome-container">
+  <p class="app-main-header">The world’s first Community-Created, Open Source, 100% On-Chain 2D RPG Ecosystem.</p>
 
-    <p>WELCOME works!</p>
-    
-    <h3>Extended Fab</h3>
+  <!-- <h3>Extended Fab</h3>
     <div class="example-button-row">
 
 
@@ -39,6 +38,61 @@
         <mat-icon>favorite</mat-icon>
         Link
       </a>
+    </div> -->
+
+  <div class="cards-container">
+    <div class="card left-card">
+      <div class="mini-section left">
+        <img src="../../../../../assets/img/icpbadge.png">
+        <div class="curtain-container">
+          <div class="curtain-content">
+            <mat-label>Obsidian Tears Is Powered By The </mat-label>
+            <a href="https://internetcomputer.org" target="_blank" rel="noopener">Internet Computer ICP</a>
+            <mat-label> And All Nft And Game Assets Are Stored On The ICP Blockchain</mat-label>
+          </div>
+          <div class="curtain"></div>
+        </div>
+      </div>
+
     </div>
+    <div class="card right-card">
+      <div class="mini-section right content-right">
+        <img src="../../../../../assets/img/npc3.jpg">
+      </div>
+
+      <div class="right-card-content">
+        <mat-label class="title">The ICP BLOCKCHAIN provides</mat-label>
+       
+        <div class="mini-cards-container">
+          <div class="mini-card">
+            <mat-label>No Gas Fees</mat-label>
+            <img src="../../../../../assets/img/fuel-icon.jpg">
+          </div>
+          <div class="mini-card">
+            <mat-label>Low Storage Costs</mat-label>
+            <img src="../../../../../assets/img/db-icon.png">
+          </div>
+          <div class="mini-card">
+            <mat-label>Top Tips</mat-label>
+            <img src="../../../../../assets/img/helpful-tips-icon.png">
+          </div>
+        </div>
+      </div>
+
+      <div class="right-card-bottom">
+        <div class="curtain-container">
+          <div class="curtain-content">
+            <mat-label>Read More In Our </mat-label><mat-label class="hide-lt-xs">&rarr;</mat-label>
+            <a href="https://medium.com/@claytoncosd/how-the-internet-computer-helps-enable-success-for-on-chain-gaming-featuring-obsidian-tears-50d0e57a4533"
+              target="_blank" rel="noopener"> Medium Article</a>
+          </div>
+          <div class="curtain"></div>
+        </div>
+      </div>
+
+
+
+    </div>
+  </div>
 
 </div>
