--- a/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.html
+++ b/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.html
@@ -33,11 +33,11 @@
         <mat-icon>library_books</mat-icon>
         <span>News</span>
     </a>
-    <a class="icon icon-container navig-item margin-applied">
+    <a class="icon icon-container navig-item margin-applied support-icon">
         <img id="toolbar-image" src="../../../../../assets/img/discord-obsidian-logo.svg" />
         <span>Discord</span>
     </a>
-    <a class="icon icon-container navig-item">
+    <a class="icon icon-container navig-item support-icon">
         <img id="toolbar-image" src="../../../../../assets/img/twitter-new-brand-icon-obsidian-logo.svg" />
         <span>Twitter</span>
     </a>
