--- a/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.scss
@@ -1,8 +1,98 @@
 @import "./../../../styles/colors.scss";
 @import "./../../../styles/dimensions.scss";
+@import "./../../../styles/viewports.scss";
 
 .footer-container {
-    padding: 0 32px 1.5rem 32px;
+    background: rgba(25, 25, 25, 0.5);
+    margin-top: 4rem;
+    padding: .5rem 2rem 0 2rem;
     height: $footer-height;
     color: $primary-obsidian-light;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-end;
+
+    @media (max-width: $lt-sm-md) {
+        margin-top: 2.5rem;
+        padding: .25rem .5rem 0 .5rem;
+    }
+
+    .top {
+        width: 80%;
+        margin: auto;
+        display: flex;
+        justify-content: space-around;
+
+        @media (max-width: $lt-sm-md) {
+            font-size: 12px;
+        }
+
+        ul {
+            display: flex;
+            justify-content: space-around;
+            list-style: none;
+            margin: 0;
+            padding: 18px 0 12px 0;
+            max-width: 1054px
+        }
+
+        li {
+            text-align: center;        
+        }
+
+        a {
+            padding: 1rem;
+            text-decoration: none;
+            color: $primary-obsidian-light;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: .5rem;
+
+            &:hover {
+                background-color: rgba($primary-midnight-blue, 0.1);
+                color: lighten($primary-obsidian-light, 20%);
+
+                img {
+                    transform: scale(1.04);
+                }
+              }
+        }
+
+        img {
+            width: 40px;
+
+            @media (max-width: $lt-sm-md) {
+                width: 30px;
+            }
+        }
+
+        .message {
+            margin-top: 5px;
+            font-weight: 400;
+
+            @media (max-width: $lt-sm-md) {
+                font-size: 10px;
+            }
+        }
+    }
+
+
+    p {
+        transition: color .3s ease;
+        font-weight: 300;
+        grid-column: span 4;
+        font-size: .75rem;
+        // margin-block-start: 1rem;
+        padding: .5rem .5rem .2rem .5rem;
+        position: relative; bottom: 0; width:100%; text-align: center
+    }
+
+    @media (max-width: $lt-sm-md) {
+        p {
+            font-size: 9px;
+        }
+    }
+
 }
