--- a/obsidian-tears-fe/src/app/components/layout/header-component/header.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/header-component/header.component.scss
@@ -12,7 +12,7 @@ mat-toolbar {
     width: 100%;
 
     li {
-      padding: 0 16px;
+      padding: 0 1rem;
     }
   }
 }
@@ -25,18 +25,18 @@ mat-toolbar {
 .icon {
   a {
     display: block;
-    width: 24px;
+    width: 1.5rem; //24px;
   }
 
   img {
     display: block;
     margin: 0;
-    width: 24px;
+    width: 1.5rem; //24px;
   }
 
   &.logo {
     img {
-      width: 55px;
+      width: 3.438rem; //55px;
     }
   }
 }
@@ -56,16 +56,20 @@ mat-toolbar {
     font-family: Material Symbols Outlined;
     text-align: center;
     line-height: normal;
-    color: rgba($primary-deep-crimson, .9);
-    font-size: 18px;
+    color: lighten($primary-deep-crimson, 8%);
+    font-size: 1.125rem; //18px
 
     &:hover {
-      color: $primary-deep-crimson;
+      color: lighten($primary-deep-crimson, 15%);
     }
 
     @media (min-width: $gt-md) {
+      gap: 0.375rem; //6px
+    }
+
+    @media (min-width: $gt-lg) {
       flex-direction: row;
-      gap: 6px;
+      gap: .75rem; //12px
     }
 
     &.active-router-link {
@@ -82,12 +86,12 @@ mat-toolbar {
   display: flex;
   flex-direction: row;
   align-items: center;
-  gap: 6px
+  gap: 0.375rem; //6px
 }
 
 .menu-btn {
   color: $primary-obsidian-light;
-  margin-left: 20px;
+  margin-left: 1.25rem; //20px
 
   &:hover {
     background-color: rgba($primary-midnight-blue, 0.5);
