--- a/obsidian-tears-fe/src/app/styles/dimensions.scss
+++ b/obsidian-tears-fe/src/app/styles/dimensions.scss
@@ -1,6 +1,14 @@
-// height values
-$toolbar-height: 4.125rem; // 66px
+/////////////////////////////////////////////////////////
+////////// height values ///////////////////////////////
+$toolbar-height: 4rem; // 64px
 $footer-height: 12.5rem; // 200px
+$app-main-container-padding-top-height: 1.5rem; // 24px
 
-// width values
+// $lt-sm //
+
+$toolbar-height-lt-sm: 3.5rem; //56px
+
+
+////////////////////////////////////////////////////////
+////////// width values ///////////////////////////////
 $sidenav-width: 8rem; // 128px - good for small viewports
