adds more content to game page, adds swiper package dependency, adds retro fonts, adds image for swiper, updates global styling

--- a/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.html
@@ -2,6 +2,7 @@
     <div class="top">
         <ul>
             <li>
+                <!-- TODO: Update twitter href to DISCORD href -->
                 <a href="https://twitter.com/obsidian__tears" target="_blank" rel="noopener">
                     <img id="toolbar-image" src="../../../../../assets/img/discord-obsidian-logo.svg" />
                     <span>Discord</span>
