--- a/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.html
@@ -1,44 +1,5 @@
 <div class="welcome-container">
-  <p class="app-main-header">The world’s first Community-Created, Open Source, 100% On-Chain 2D RPG Ecosystem.</p>
-
-  <!-- <h3>Extended Fab</h3>
-    <div class="example-button-row">
-
-
-        <button type="button" mat-fab extended color="primary">
-            <img src="../../../../../assets/img/npc3.jpg" width="32">
-          </button>
-
-          <a
-          ><img
-            id="toolbar-image"
-            src="../../../../../assets/img/npc3.jpg"
-            width="32"
-          />
-        </a>
-
-
-      <button mat-fab extended color="primary">
-        <mat-icon>favorite</mat-icon>
-        Primary
-      </button>
-      <button mat-fab extended color="accent">
-        <mat-icon>favorite</mat-icon>
-        Accent
-      </button>
-      <button mat-fab extended color="warn">
-        <mat-icon>favorite</mat-icon>
-        Warn
-      </button>
-      <button mat-fab extended disabled>
-        <mat-icon>favorite</mat-icon>
-        Disabled
-      </button>
-      <a mat-fab extended routerLink=".">
-        <mat-icon>favorite</mat-icon>
-        Link
-      </a>
-    </div> -->
+  <p class="app-global-header">The world’s first Community-Created, Open Source, 100% On-Chain 2D RPG Ecosystem.</p>
 
   <div class="cards-container">
     <div class="card left-card">
@@ -46,9 +7,9 @@
         <img src="../../../../../assets/img/icpbadge.png">
         <div class="curtain-container">
           <div class="curtain-content">
-            <mat-label>Obsidian Tears Is Powered By The </mat-label>
+            <mat-label>OBSIDIAN TEARS Is Powered By The </mat-label>
             <a href="https://internetcomputer.org" target="_blank" rel="noopener">Internet Computer ICP</a>
-            <mat-label> And All Nft And Game Assets Are Stored On The ICP Blockchain</mat-label>
+            <mat-label> And All NFTs And GAME ASSETS Are Stored On The ICP BLOCKCHAIN</mat-label>
           </div>
           <div class="curtain"></div>
         </div>
