--- a/obsidian-tears-fe/src/app/styles/viewports.scss
+++ b/obsidian-tears-fe/src/app/styles/viewports.scss
@@ -5,6 +5,7 @@ $lt-sm-md: 859px; //'screen (max-width: 859px); // exchange point
 $lt-md: 959px; //'screen (max-width: 959px);
 $lt-md1: 1059px; //'screen (max-width: 1059px);
 $lt-lg: 1279px; //'screen (max-width: 1279px);
+$lt-lg1: 1479px; //'screen (max-width: 1479px);
 $lt-xl: 1919px; //'screen (max-width: 1919px);
 
 $gt-sm: 600px; //'screen (min-width: 600px);
