--- a/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/footer-component/footer.component.scss
@@ -3,6 +3,7 @@
 @import "./../../../styles/viewports.scss";
 
 .footer-container {
+    font-family: 'minecraft-font', sans-serif;
     background: rgba(25, 25, 25, 0.5);
     margin-top: 4rem;
     padding: .5rem 2rem 0 2rem;
@@ -72,7 +73,13 @@
             margin-top: 5px;
             font-weight: 400;
 
+            @media (max-width: $lt-md) {
+                margin-top: 4px;
+                font-size: 12px;
+            }
+
             @media (max-width: $lt-sm-md) {
+                margin-top: 3.5px;
                 font-size: 10px;
             }
         }
@@ -80,6 +87,7 @@
 
 
     p {
+        font-family: 'edunline-font', sans-serif;
         transition: color .3s ease;
         font-weight: 300;
         grid-column: span 4;
