--- a/obsidian-tears-fe/src/app/components/layout/main/game-component/game.component.html
+++ b/obsidian-tears-fe/src/app/components/layout/main/game-component/game.component.html
@@ -1,1 +1,17 @@
-<p>game works!</p>
+<div class="app-global-container">
+
+    <p class="app-global-header">OBSIDIAN TEARS GAME is Currently Under Development <mat-icon>construction</mat-icon></p>
+
+    <!-- <mat-label class="app-global-sub-header">Epic Adventures Await - A Preview of Upcoming Retro Game </mat-label> -->
+
+    <div class="game-container">
+        <mat-label class="app-global-sub-header">Epic Adventures Await - A Preview of Upcoming Retro Game </mat-label>
+
+        <p>this will be the swiper</p>
+        
+        <p>OBSIDIAN TEARS Is Currently Under Development And Falls Under The ‘2D RPG’ Genre. It’s Gameplay Will Be Similar To Zelda: A Link To The Past And Final Fantasy 2. Unlike Zelda And Final Fantasy, However, It Will Feature The Playable Character, Artifacts, Weapons, Armor, Etc. All As NFTs.</p>
+        
+
+    </div>
+
+</div>
