--- a/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.scss
+++ b/obsidian-tears-fe/src/app/components/layout/main/welcome-component/welcome.component.scss
@@ -4,7 +4,6 @@
 @import './../../../../styles/global-styles.scss';
 
 .welcome-container {
-  // padding: 1rem;
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -127,6 +126,12 @@
             transform: scale(1.1);
           }
 
+          @media (max-width: $lt-lg) {
+            margin: .5rem;
+            width: 7rem;
+            height: 8rem;
+          }
+
           @media (max-width: $lt-sm-md) {
             width: 5rem;
             height: 6rem;
@@ -135,10 +140,6 @@
           @media (min-width: $gt-lg) {
             width: 12rem;
             height: 13rem;
-          }
-
-          @media (max-width: $lt-lg) {
-            margin: .5rem;
           }
         }
       }
