--- a/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.scss
+++ b/obsidian-tears-fe/src/app/shared/components/nav-items-list.component/nav-items-list.component.scss
@@ -64,11 +64,13 @@
     .toolbar-title {
       display: flex;
       flex-direction: column;
-      font-family: Material Symbols Outlined;
+      // font-family: Material Symbols Outlined;
+      font-family: 'retro-computer-font', sans-serif; // font for the logo header txt
+
       text-align: center;
       line-height: normal;
       color: lighten($primary-deep-crimson, 14%);
-      font-size: 18px;
+      font-size: 1rem;
       padding-top: 0;
 
       &:hover {
@@ -98,6 +100,8 @@
 }
 
 ul {
+  font-family: 'pixeled-font', sans-serif; // font for the buttons on the sidenav
+
   color: $primary-obsidian-light;
   padding: 0;
   margin: 0 16px;
@@ -109,18 +113,22 @@ ul {
   }
 
   a {
+    font-size: .7rem;
     text-decoration: none;
     padding: 0 16px; // right and left
 
 
     @media (max-width: $lt-md1) {
       padding: 0 10px;
+      font-size: .6rem;
     }
     @media (max-width: $lt-md) {
       padding: 0 6px;
+      font-size: .55rem;
     }
     @media (max-width: $lt-sm-md) {
       padding: 12px 0;
+      font-size: .6rem;
     }
   }
 }
@@ -184,6 +192,11 @@ ul {
 .support-icon {
   @media (max-width: $lt-sm-md) {
     display: none;
+  }
+  @media (max-width: $lt-lg1) {
+    span {
+      display: none;
+    }
   }
 }
 
