--- a/obsidian-tears-fe/src/app/styles/global-styles.scss
+++ b/obsidian-tears-fe/src/app/styles/global-styles.scss
@@ -6,18 +6,54 @@
 }
 
 // HEADER STYLE
-.app-main-header {
-    font-family: 'Press Start 2P', cursive;
-    font-size: 22px;
+.app-global-header {
+    // font-family: 'Press Start 2P', cursive;
+    font-family: 'edunline-font', sans-serif;
+    font-size: 26px;
+    text-align: center;
     letter-spacing: 2px;
-    text-transform: uppercase;
+    // text-transform: uppercase;
     text-shadow: 2px 2px 0px #333;
-    color: #32718c;
+    color: #3f85a3;
     padding: 0rem 1rem 1rem 1rem;
 
-    @media (max-width: $lt-sm-md) {
-        font-size: 14px;
+    @media (max-width: $lt-lg1) {
+        font-size: 22px;
     }
+
+    @media (max-width: $lt-sm-md) {
+        font-size: 16px;
+    }
+}
+
+// SUB HEADER STYLE
+.app-global-sub-header {
+    font-family: 'edunline-font', sans-serif;
+    font-size: 19px;
+    text-align: center;
+    letter-spacing: 2px;
+    // text-transform: uppercase;
+    text-shadow: 2px 2px 0px #171616;
+    color: #32718c;
+
+    padding: 0rem 1rem 1rem 1rem;
+    padding-top: 1rem;
+
+    @media (max-width: $lt-lg1) {
+        font-size: 16px;
+    }
+
+    @media (max-width: $lt-sm-md) {
+        font-size: 13px;
+    }
+}
+
+// Flex CONTAINER STYLE
+.app-global-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 mat-label {
